# RSSapp

./: .gitignore  README.md  docker-compose.yml  generate_embeddings.py
client/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx  routes.jsx
client/src/components/: FeedCard.jsx  FeedGrid.jsx  ProtectedRoute.js
client/src/context/: AuthContext.js  index.js
client/src/lib/: util.jsx
client/src/pages/: AddFeed.jsx  AllFeeds.jsx  CategoriesFeeds.jsx  EditFeeds.jsx  FeedBrowser.jsx  ForYou.jsx  GptApp.jsx  ItemBrowser.jsx  ItemViewer.jsx  Modals.js  MySubscriptions.jsx  Reccom.jsx  ViewFeed.jsx
old-server/backend/: Dockerfile  pyproject.toml  requirements.txt
old-server/langchain-llm-app/: .env  demo.py  main.py  requirements.txt  rss_fetcher.py
old-server/my-servers/: Dockerfile  docker-compose.yml
old-server/my-servers/generate_embeddings/: Dockerfile  generate_embeddings.py
old-server/qdrant_storage/: raft_state.json
server/: .env  docker-compose.yml
server/app/: Dockerfile
server/langchain-llm-app/: demo.py  main.py  requirements.txt
server/rss_fetcher/: requirements.txt  rss_fetcher.py
server/scraper/: Dockerfile  requirements.txt  scraper.py
server/scraper/data/: allfeeds.csv  (+2 more)
server/upsert_db/: upsert_db.py
services/: .dockerignore  README.md  docker-compose.yml  nginx_config.conf  requirementst.txt
services/backend/: requirements.txt
services/llm-service/: docker-compose  requirements.txt
services/miniflux-service/: Dockerfile  requirements.txt  requirementsn.txt
(+136 files in other folders)
