[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Orestis <orestisj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
databases = {extras = ["postgresql"], version = "^0.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
